Update textarea to prevent it from automatically handling overflow

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -23,7 +23,7 @@ label {
   resize: none;
   outline: none;
   margin-top: -0.5em;
-  height: 2em;
+  /* height: 2em; */
 }
 
 .submit {
